<resources>
    <string name="app_name">Best Natural Pain Cream, LLC</string>
    <string name="image_logo">logo</string>
    <string name="text_name">Best Natural Pain Cream, LLC</string>
    <string name="text_vendor">Independent Vendor</string>
    <string name="text_vendor2">Real Time Pain Relief Products</string>
    <string name="text_www">BestNaturalPainCream.com</string>
    <string name="text_phone">772\-678\-0787</string>
</resources>
